--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+    <meta-data
+      android:name="com.google.android.maps.v2.API_KEY"
+      android:value="AIzaSyCcgg8vnPs7ZufV46fimDlun5IKdC87T_c"/>
     <activity android:name=".LocatrActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
